@@ -1,4 +1,4 @@
-<!-- $ Id: $ -->
+<!-- $Id: $ -->
 
   <section id="internals">
     <title>Rivet Internals</title>
