@@ -1,3 +1,6 @@
+2017-10-28 Massimo Manghi <mxmanghi@apache.org>
+    * docs/xml/cmake.xml: draft manual page for cmake build system
+
 2017-10-22 Massimo Manghi <mxmanghi@apache.org>
     * rivet/init.tcl.in: Following Jeff Lawson's suggestion we check
     if init.tcl is loaded from within mod_rivet. If we're not running
